kubernetes/platform/openbao/metrics.yaml
apiVersion: v1
kind: Service
metadata:
  name: openbao-metrics
  namespace: openbao
  labels:
    app.kubernetes.io/name: openbao-metrics
    app.kubernetes.io/part-of: openbao
spec:
  selector:
    app.kubernetes.io/instance: openbao
    app.kubernetes.io/name: openbao
    component: server

  ports:
    - name: metrics
      port: 9101
      targetPort: 9101
      protocol: TCP
